// AUTOMATICALLY GENERATED BY SimpleRPC

syntax = "proto3";
import "google/protobuf/empty.proto";
package SupplierLogicpkg;

service SupplierLogic {
    rpc add_product(add_productRequest) returns (add_productResponce) {}
    rpc my_products_list(my_products_listRequest) returns (my_products_listResponce) {}
}

message add_productRequest {
    string title = 1;
    string titleImageUrl = 2;
    int64 costNum = 3;
    string description = 4;
    int64 authorId = 5;
    repeated string additionalImagesUrls = 6;
}
message my_products_listResponce {
    repeated ProductSchema ProductSchemasArray = 1;
}
message add_productResponce {
}
message ProductSchema {
    int64 productId = 1;
    int64 supplierId = 2;
    string title = 3;
    string titleImage = 4;
    int64 cost = 5;
    string description = 6;
}
message my_products_listRequest {
    int64 userId = 1;
    int64 start = 2;
    int64 count = 3;
    string sort = 4;
}
